--- a/patrolLibrary/src/main/res/layout/activity_patrol_target_device.xml
+++ b/patrolLibrary/src/main/res/layout/activity_patrol_target_device.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff">
+    android:background="#f5f5f5">
 
     <include layout="@layout/patrol_layout_public_target_target_view" />
 
