--- a/patrolLibrary/src/main/res/layout/activity_patrol_device_add_danger.xml
+++ b/patrolLibrary/src/main/res/layout/activity_patrol_device_add_danger.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/patrol_color_gray_bg"
+    android:background="#f5f5f5"
     android:overScrollMode="never"
     android:scrollbars="none">
 
@@ -45,7 +45,7 @@
         <Button
             android:id="@+id/patrol_device_add_danger_btn_save_danger"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="添加" />
 
