--- a/patrolLibrary/src/main/res/layout/activity_patrol_main.xml
+++ b/patrolLibrary/src/main/res/layout/activity_patrol_main.xml
@@ -77,6 +77,81 @@
             android:background="#ffffff"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <LinearLayout
+                    android:id="@+id/patrol_main_ll_todo_task"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/patrol_main_ic_todo_task_24dp"
+                        android:tint="#333333" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="缺陷处理" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/patrol_main_ll_danger_query"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/patrol_main_ic_query_task_24dp"
+                        android:tint="#333333" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="缺陷查询" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/patrol_main_ll_inspect_history"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/patrol_main_ic_history_patrol_24dp"
+                        android:tint="#333333" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="巡查历史" />
+                </LinearLayout>
+
+            </LinearLayout>
+
             <android.support.design.widget.TabLayout
                 android:id="@+id/patrol_main_tab"
                 android:layout_width="match_parent"
