--- a/patrolLibrary/src/main/res/values/colors.xml
+++ b/patrolLibrary/src/main/res/values/colors.xml
@@ -2,6 +2,9 @@
 <resources>
     <color name="colorPrimary">#09bb07</color>
 
+    <color name="patrol_color_success">#34C156</color>
+    <color name="patrol_color_error">#ff0000</color>
+
     <color name="patrol_content_normal_bg">#C6EAC6</color>
     <color name="patrol_content_normal_text">#09bb07</color>
     <color name="patrol_content_danger_bg">#F3D2D1</color>
