--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,5 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="跳转到巡检"
+        android:layout_margin="10dp"
         android:onClick="jumpPatrol"/>
 </LinearLayout>
