--- a/patrolLibrary/src/main/res/values/colors.xml
+++ b/patrolLibrary/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
 
     <color name="patrol_color_success">#34C156</color>
     <color name="patrol_color_error">#ff0000</color>
-    <color name="patrol_color_gray">#cccccc</color>
+    <color name="patrol_color_gray">#999999</color>
     <color name="patrol_color_orange">#FFF2AF06</color>
 
     <color name="patrol_content_normal_bg">#C6EAC6</color>
