--- a/patrolLibrary/src/main/res/layout/patrol_layout_item_danger_list.xml
+++ b/patrolLibrary/src/main/res/layout/patrol_layout_item_danger_list.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="5dp"
     app:cardBackgroundColor="#ffffff"
     app:cardCornerRadius="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:background="?selectableItemBackground"
+        android:orientation="vertical"
         android:paddingBottom="10dp"
         android:paddingTop="10dp">
 
@@ -32,6 +35,7 @@
                 android:paddingRight="10dp"
                 android:paddingTop="5dp"
                 android:text="工程检查"
+                android:textSize="16sp"
                 android:textColor="#ffffff" />
 
             <TextView
@@ -45,17 +49,33 @@
                 tools:text="未处理" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/patrol_danger_list_recycler_item_tv_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
-            android:singleLine="true"
-            android:textColor="#333"
-            android:textSize="18sp"
-            tools:text="你玩「吃鸡类」游戏时，最穷的一次吃鸡，和最富的一次快递是怎样的？" />
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/patrol_danger_list_recycler_item_iv_attach"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/patrol_ic_attachment_black_24dp"
+                android:tint="@color/colorPrimary" />
+
+            <TextView
+                android:id="@+id/patrol_danger_list_recycler_item_tv_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:singleLine="true"
+                android:textColor="#333"
+                android:textSize="18sp"
+                tools:text="你玩「吃鸡类」游戏时，最穷的一次吃鸡，和最富的一次快递是怎样的？" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -69,19 +89,10 @@
                 android:id="@+id/patrol_danger_list_recycler_item_tv_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
                 android:ellipsize="end"
                 android:maxLines="2"
                 android:textSize="16sp"
                 tools:text="此时还剩下6个人，我，打死伏地魔的那个人，和另外不知道在哪的4个人。在缩下一圈的时候我超快的从那个被打死的伏地魔身上搜了点药和一把ump9外加一点子弹，他另外一把枪是98k，头甲和98k实在来不及捡放弃了。" />
-
-            <ImageView
-                android:id="@+id/patrol_danger_list_recycler_item_iv_danger"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginTop="5dp"
-                android:scaleType="centerCrop"
-                tools:src="@mipmap/patrol_main_header_image" />
         </LinearLayout>
 
         <LinearLayout
