--- a/patrolLibrary/src/main/res/layout/activity_patrol_danger_check_handle.xml
+++ b/patrolLibrary/src/main/res/layout/activity_patrol_danger_check_handle.xml
@@ -19,6 +19,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="16sp"
                 android:text="请选择处理类型" />
 
             <RadioGroup
@@ -37,16 +38,10 @@
             android:orientation="vertical"
             android:padding="10dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="请填写处理意见" />
-
             <EditText
                 android:id="@+id/patrol_danger_solve_check_handle_edt_opinion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
                 android:background="#ffffff"
                 android:gravity="left|top"
                 android:hint="请填写处理意见"
