--- a/patrolLibrary/src/main/res/layout/activity_patrol_danger_solve.xml
+++ b/patrolLibrary/src/main/res/layout/activity_patrol_danger_solve.xml
@@ -4,9 +4,9 @@
     android:layout_height="match_parent"
     android:background="#f5f5f5">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -88,7 +88,7 @@
             </LinearLayout>
 
         </LinearLayout>
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
     <Button
         android:id="@+id/patrol_danger_solve_btn_submit"
